[gd_scene load_steps=13 format=3 uid="uid://btdk3l2iwede5"]

[ext_resource type="Texture2D" uid="uid://3ed5kwvf6jbu" path="res://assets/Entities/Enemy/Guard/Guard.png" id="1_w85bw"]
[ext_resource type="Script" path="res://Scripts/guard_2.gd" id="1_yla2s"]
[ext_resource type="PackedScene" uid="uid://db26mpx05ksgk" path="res://assets/Entities/Enemy/Guard/GuardProjectile.tscn" id="2_6r7e3"]

[sub_resource type="Animation" id="Animation_7nowf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 6)]
}

[sub_resource type="Animation" id="Animation_jx30f"]
resource_name = "death"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 6), Vector2i(1, 6), Vector2i(2, 6), Vector2i(3, 6), Vector2i(4, 6), Vector2i(5, 6), Vector2i(6, 6), Vector2i(7, 6)]
}

[sub_resource type="Animation" id="Animation_4wsnl"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.35, 0.525, 0.725),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 9), Vector2i(1, 9), Vector2i(2, 9), Vector2i(3, 9), Vector2i(4, 9)]
}

[sub_resource type="Animation" id="Animation_q3b1t"]
resource_name = "jump"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.125, 0.35),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(0, 7), Vector2i(1, 7)]
}

[sub_resource type="Animation" id="Animation_8b7o2"]
resource_name = "run"
length = 0.8025
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.275, 0.45, 0.575, 0.725),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 8), Vector2i(1, 8), Vector2i(2, 8), Vector2i(3, 8), Vector2i(4, 8), Vector2i(5, 8)]
}

[sub_resource type="Animation" id="Animation_hyfjf"]
resource_name = "shoot"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.225, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mt6tu"]
_data = {
"RESET": SubResource("Animation_7nowf"),
"death": SubResource("Animation_jx30f"),
"idle": SubResource("Animation_4wsnl"),
"jump": SubResource("Animation_q3b1t"),
"run": SubResource("Animation_8b7o2"),
"shoot": SubResource("Animation_hyfjf")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_16sx4"]
height = 34.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n6ob6"]
size = Vector2(336, 77.375)

[node name="Guard2" type="CharacterBody2D"]
script = ExtResource("1_yla2s")
projectile = ExtResource("2_6r7e3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_mt6tu")
}

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-26, -31)
texture = ExtResource("1_w85bw")
centered = false
hframes = 17
vframes = 11
frame = 102

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_16sx4")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -22.6875)
shape = SubResource("RectangleShape2D_n6ob6")

[node name="WallChecker" type="RayCast2D" parent="."]
position = Vector2(1, -12)
rotation = -1.5708
target_position = Vector2(-9.53674e-07, 17)
collision_mask = 2

[node name="PlayerChecker" type="RayCast2D" parent="."]
rotation = -1.5708
target_position = Vector2(-6.38186e-06, 146)

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
